# agus-cli

./: .gitignore  Cargo.toml  README.md  install.sh
apps/agus-cli/: Cargo.toml
crates/agus-cli-core/: Cargo.toml
crates/agus-cli-core/src/: audit.rs  config.rs  context.rs  exec.rs  executions.rs  hosts.rs  lib.rs  plan.rs  risk.rs
crates/agus-core-domain/: Cargo.toml
crates/agus-core-domain/src/: lib.rs
crates/agus-executor/: Cargo.toml
crates/agus-executor/src/: lib.rs  log_stream.rs
crates/agus-observer/: Cargo.toml
crates/agus-observer/src/: alerting.rs  container_health.rs  container_logs.rs  junk_cleaner.rs  lib.rs  nginx.rs  performance_metrics.rs  vulnerability.rs
crates/agus-planner/: Cargo.toml
crates/agus-planner/src/: context_integration.rs  lib.rs  llm.rs
crates/agus-planner/src/llm/: embedding.rs
crates/agus-ssh/: Cargo.toml
crates/agus-ssh/src/: lib.rs
crates/agus-storage/: Cargo.toml
crates/agus-storage/src/: lib.rs
