[package]
name = "agus-cli-core"
version = "0.1.0"
edition = "2021"

[dependencies]
agus-core-domain = { path = "../agus-core-domain" }
agus-ssh = { path = "../agus-ssh" }
agus-storage = { path = "../agus-storage" }
argon2 = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
