[package]
name = "agus-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
agus-core-domain = { path = "../agus-core-domain" }
agus-ssh = { path = "../agus-ssh" }
agus-context-engine = { path = "../agus-context-engine" }
agus-risk-engine = { path = "../agus-risk-engine" }
agus-planner = { path = "../agus-planner" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
