[package]
name = "agus-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
agus-core-domain = { path = "../agus-core-domain" }
fs2 = "0.4"
flate2 = "1"
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
